# InfinityEngine-Enhancer

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  enhancements.md  renovate.json
.agent/rules/: code-style-cpp.md
.github/: dependabot.yml
.github/.github/: dependabot.yml
.github/workflows/: build.yml
assets/game-override/: fpSEAM.glsl
assets/game-textures/: README.md  iee_effects_noise.rgba  iee_water_dudv.rgba  iee_water_normal.rgba
assets/override/: fpSEAM.glsl
assets/shaders/: fpSELECT.glsl
docs/: architecture.md  are-animation-detection.md  build-manifests.md  new-build-validation.md  reverse-engineering.md  runtime-types.md  sprite-upscale.md  threading-model.md  tile-upscale.md
docs/archive/prototypes/: README.md  legacy-renderer-hook.cpp  standalone-injector.cpp
docs/superpowers/plans/: 2026-06-10-phase0-foundation-phase1-proof.md  2026-06-11-phase2-water.md  2026-06-13-phase2.5-fine-mask.md
docs/superpowers/specs/: 2026-06-10-graphics-enhancement-roadmap-design.md
docs/validation/: bgee-2.7.3-evidence.md  phase0-gates.md
shaders/: InfinityEngine-Enhancer.cpp
shaders/sprite/: README.md
shaders/sprite/easu_rcas/: blit.frag  easu.frag  rcas.frag  sprite.vert
shaders/sprite/runtime_baseline/: README.md  fpselect.glsl  fpsprite.glsl
shaders/sprite/v1/: fpdraw.glsl  fpselect.glsl  fpsprite.glsl
shaders/sprite/v1/diagnostics/: README.md  fpdraw_path_probe.glsl  fpselect_easu_delta.glsl  fpselect_probe.glsl  fpsprite_easu_delta.glsl  fpsprite_probe.glsl
src/iee/: app_context.h  area_state.cpp  area_state.h  diagnostics.cpp  diagnostics.h  dll_main.cpp  exports.cpp  frame_hook.cpp  frame_hook.h  hooks.cpp  hooks.h  shader_diagnostics.cpp  shader_diagnostics.h  shader_probe.cpp  shader_probe.h  shader_uniform_bridge.cpp  shader_uniform_bridge.h  water_textures.cpp  water_textures.h
src/iee/core/: config.cpp  config.h  gl_state_guard.h  hooking.h  logger.cpp  logger.h  pattern_scanner.cpp  pattern_scanner.h  performance_samples.h  version.h.in
src/iee/features/: tile_render.cpp  tile_render.h
src/iee/game/: are_animations.cpp  are_animations.h  area_texture.cpp  area_texture.h  build_manifest.cpp  build_manifest.h  dds_texture.cpp  dds_texture.h  eeex_doc_layouts_x64.h  file_formats.h  game_addrs.cpp  game_addrs.h  game_types.h  object_statics.cpp  object_statics.h  opengl_types.cpp  opengl_types.h  renderer.cpp  renderer.h  resref_runtime.cpp  resref_runtime.h  runtime_types_x64.h  shader_override.cpp  shader_override.h  shader_runtime.cpp  shader_runtime.h  shader_trace.cpp  shader_trace.h  sprite_body_fsr.cpp  sprite_body_fsr.h  texture_units.h  tile_liquid.cpp  tile_liquid.h  tile_liquid_shader.cpp  tile_liquid_shader.h  tile_upscale.cpp  tile_upscale.h  tis_palette.cpp  tis_palette.h  tis_runtime.cpp  (+3 more)
tests/: iee_tests.cpp
tools/: InfinityEngine-Enhancer.sample.ini  M_IEEE.lua
tools/injector/: injector.cpp
